--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: JSHacks
 email: contact@jshacks.io
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  JS Hacks consists of a series of hackathons that bring together JavaScript enthusiasts to build innovative solutions that solve real-world problems.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://jshacks.io" # the base hostname & protocol for your site
 twitter_username: jshacksio
