--- a/_config.yml
+++ b/_config.yml
@@ -14,17 +14,27 @@ keep_files:
 
 
 # Site settings
-title: JSHacks
-email: contact@jshacks.io
-description: > # this means to ignore newlines until "baseurl:"
-  JS Hacks consists of a series of hackathons that bring together JavaScript enthusiasts to build innovative solutions that solve real-world problems.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jshacks.io" # the base hostname & protocol for your site
-twitter_username: jshacksio
-github_username: js-hacks
-facebook_username: jshacks
+title: jsHacks
+subtitle: "jsHacks"
+# Base URL of site. It should always start with a slash,
+# and never end with a slash. Set it to a blank value if hosting at the
+# root of your server.
+# baseurl: "/" # the subpath of your site
+url: "jshacks.io" # the base hostname & protocol for your site
+baseurl: ""
+cover: "/assets/cover.png"
+logo: "/assets/logo.png"
 
 # Build settings
 markdown: kramdown
 
-google_analytics: UA-84490590-1
+# Google analytics
+# ga_tracking_id: "UA-XXXX-1"
+
+# Category descriptions (for archive pages)
+descriptions:
+  - cat: jekyll
+    desc: "Posts describing Jekyll setup techniques."
+
+  - cat: dummy
+    desc: "Just some placeholder posts, lorem ipsum and the rest."
