--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ subtitle: "jsHacks"
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 # baseurl: "/" # the subpath of your site
-url: "jshacks.io" # the base hostname & protocol for your site
+url: "https://jshacks.io" # the base hostname & protocol for your site
 baseurl: ""
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
