--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ url: "https://jshacks.io" # the base hostname & protocol for your site
 baseurl: ""
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
+port: 4444
 
 # Build settings
 markdown: kramdown
